--- a/source/index.html
+++ b/source/index.html
@@ -1,14 +1,125 @@
 <!DOCTYPE html>
 <html class ="page" lang="ru">
   <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="preload" href="fonts/oswaldmedium.woff2" as="font">
-    <link rel="preload" href="fonts/oswaldregular.woff2" as="font">
+    <link rel="preload" href="fonts/baronneue.woff" as="font">
+    <link rel="preload" href="fonts/baronneue.woff2" as="font">
     <link rel="stylesheet" href="css/style.min.css">
-    <title> New project</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+		<script src="jquery.mask.min.js"></script>
+    <title> BLACK SOFTWARE</title>
   </head>
   <body class="body">
-    <p> This is a new project of Black Software company</p>
+    <main class="page-main">
+      <section class="offer">
+     <!-- <div class="offer__background"></div>-->
+      <div class="offer__logo">
+        <div class="offer__hide-big-words"></div>
+        <div class="offer__hide-little-words"></div>
+      </div>
+      <p class="offer__text offer__text--one">Безумного миллиардера и комика уже выбрали в президенты.</p>
+    	<p class="offer__text offer__text--two">cможет ли управлять страной искусственный интеллект?</p>
+      <div class="offer__down">
+        <p class="offer__down-text">Наши работы</p>
+        <div class="offer__down-icon"></div>
+      </div>
+      </section>
+      <section class="work">
+        <a class="work__example work__example--1" href="https://dosaaf.group" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сайта для автошколы Досааф </span>
+            <span class= "work__description-site"> dosaaf.group </span>
+          </p>
+        </a>
+        <a class="work__example work__example--2" href="https://bardzimi.ru/" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сайта для компании ООО "Стрелец", владеющей торговой маркой Бардзими </span>
+            <span class= "work__description-site"> bardzimi.ru </span>
+          </p>
+        </a>
+        <a class="work__example work__example--3" href="http://www.darkvision.ru" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сайта компании DARKVISION, занимающейся видеопродакшеном  </span>
+            <span class= "work__description-site"> www.darkvision.ru </span>
+          </p>
+        </a>
+        <a class="work__example work__example--4" href="http://студиявашдом.рф" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сайта для компании Студия Ваш Дом, занимающейся установкой окон  </span>
+            <span class= "work__description-site"> студиявашдом.рф </span>
+          </p>
+        </a>
+        <a class="work__example work__example--5" href="http://orlov-52.ru" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сайта для ритуальной компании Орлов </span>
+            <span class= "work__description-site"> orlov-52.ru </span>
+          </p>
+        </a>
+        <a class="work__example work__example--6" href="http://grecords.ru" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сайта для студии звукозаписи GRecords </span>
+            <span class= "work__description-site"> grecords.ru </span>
+          </p>
+        </a>
+        <a class="work__example work__example--7" href="http://dosaaf52region.ru" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сайта для Регионального отделения ДОСААФ России Нижегородской области </span>
+            <span class= "work__description-site"> dosaaf52region.ru </span>
+          </p>
+        </a>
+        <a class="work__example work__example--8" href="http://teplo.group" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сайта для компании TEPLO GROUP, занимающейся проектированием и строительством котельных в России и СНГ </span>
+            <span class= "work__description-site"> teplo.group </span>
+          </p>
+        </a>
+        <a class="work__example work__example--9" href="https://lashlash.ru" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка интернет магазина "под ключ" для компании CONCEPT LASHES </span>
+            <span class= "work__description-site"> lashlash.ru </span>
+          </p>
+        </a>
+        <a class="work__example work__example--10" href="https://www.behance.net/gallery/84215897/mobilnoe-prilozhenie-shou-biznes-ne-dlja-tebja?tracking_source=search_projects_recommended%7Cblacksoftware" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка дизайна и логики работы обучающей платформы "Шоу бизнес не для тебя" </span>
+            <span class= "work__description-site"> showbusiness.html </span>
+          </p>
+        </a>
+        <a class="work__example work__example--11" href="https://www.behance.net/gallery/83755983/Illustrations-Mobile-App-Taxi" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка мобильного приложения "Автоняня" </span>
+            <span class= "work__description-site"> autonyanya.html </span>
+          </p>
+        </a>
+        <a class="work__example work__example--12" href="https://myunicash.com" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сервиса по управлению финансами "UniCash" </span>
+            <span class= "work__description-site"> myunicash.com </span>
+          </p>
+        </a>
+        <a class="work__example work__example--13" href="http://skullcross.ru/" target="_blank">
+          <p class="work__description">
+            <span class= work__description-client> Разработка сайта для масонского общества "Череп и Крест"</span>
+            <span class= "work__description-site"> skullcross.ru </span>
+          </p>
+        </a>
+        <a class="work__example work__example--map" href="https://yandex.ru/maps/47/nizhny-novgorod/house/ulitsa_larina_22lit1d/YE0YdgdkSEQPQFtsfX5yeH9iZw==/?ll=44.005669%2C56.238471&utm_source=main_stripe_big&z=17.7" target="_blank">
+          <p class="work__description work__description--contact">
+            <span class="work__description-title"> ооо "Блэк софтвэр" </span> <br>
+              <span><span class="work__description-uppercase">ИНН/КПП:</span> 5260458909/6001001 </span><br>
+              <span><span class="work__description-uppercase">огрн:</span> 1185275059530 </span> <br>
+              <span class="work__description-adress"> 603152  г. Нижний Новгород <br>
+ул. Ларина, 22лит1Д,  ГУ НИБИ </span>
+          </p>
+        </a>
+      </section>
+    </main>
+    <footer class="footer">
+      <a class="footer__tel" href="tel:+79524409712">+7(952)440-97-12</a>
+      <a class="footer__mail" href="mailto:an@blacksoftware.ru">an@blacksoftware.ru</a>
+      <button class="footer__button">оставить заявку</button>
+    </footer>
+    <script src="script/script.min.js"></script>
   </body>
 </html>
