--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,11 @@
   <body class="body">
     <main class="page-main">
       <section class="offer">
-     <!-- <div class="offer__background"></div>-->
-      <div class="offer__logo">
+      <div class="offer__logo-mobile">
+        <div class="offer__hide-big-words"></div>
+        <div class="offer__hide-little-words"></div>
+      </div>
+      <div class="offer__logo-desktop">
         <div class="offer__hide-big-words"></div>
         <div class="offer__hide-little-words"></div>
       </div>
