desktop first display

--- a/source/index.html
+++ b/source/index.html
@@ -13,13 +13,9 @@
   <body class="body">
     <main class="page-main">
       <section class="offer">
-      <div class="offer__logo-mobile">
-        <div class="offer__hide-big-words"></div>
-        <div class="offer__hide-little-words"></div>
-      </div>
-      <div class="offer__logo-desktop">
-        <div class="offer__hide-big-words"></div>
-        <div class="offer__hide-little-words"></div>
+      <div class="offer__logo offer__logo--animation-mobile">
+        <div class="offer__hide-big-words offer__hide-big-words--mobile"></div>
+        <div class="offer__hide-little-words offer__hide-little-words--mobile"></div>
       </div>
       <p class="offer__text offer__text--one">Безумного миллиардера и комика уже выбрали в президенты.</p>
     	<p class="offer__text offer__text--two">cможет ли управлять страной искусственный интеллект?</p>
