--- a/source/index.html
+++ b/source/index.html
@@ -25,6 +25,9 @@
       </div>
       </section>
       <section class="work">
+        <p class="work__example work__example--0">
+         Наши <br> работы!
+        </p>
         <a class="work__example work__example--1" href="https://dosaaf.group" target="_blank">
           <p class="work__description">
             <span class= work__description-client> Разработка сайта для автошколы Досааф </span>
@@ -110,6 +113,10 @@
               <span><span class="work__description-uppercase">огрн:</span> 1185275059530 </span> <br>
               <span class="work__description-adress"> 603152  г. Нижний Новгород <br>
 ул. Ларина, 22лит1Д,  ГУ НИБИ </span>
+          </p>
+          <p class="work__description work__description--yourlogo">
+            <span class= work__description-client> Здесь будет размещен логотип вашей компании</span>
+            <span class= "work__description-site"> yourcompany.ru </span>
           </p>
         </a>
       </section>
