--- a/source/index.html
+++ b/source/index.html
@@ -114,17 +114,29 @@
               <span class="work__description-adress"> 603152  г. Нижний Новгород <br>
 ул. Ларина, 22лит1Д,  ГУ НИБИ </span>
           </p>
-          <p class="work__description work__description--yourlogo">
+        </a>
+        <div class="work__example work__example--yourlogo">
+          <p class="work__description">
             <span class= work__description-client> Здесь будет размещен логотип вашей компании</span>
             <span class= "work__description-site"> yourcompany.ru </span>
           </p>
-        </a>
+        </div>
       </section>
     </main>
     <footer class="footer">
-      <a class="footer__tel" href="tel:+79524409712">+7(952)440-97-12</a>
-      <a class="footer__mail" href="mailto:an@blacksoftware.ru">an@blacksoftware.ru</a>
-      <button class="footer__button">оставить заявку</button>
+      <p class="footer__text">СВЯЖИТЕСЬ С НАМИ, ЧТОБЫ ОБСУДИТЬ ВАШ ПРОЕКТ</p>
+      <div class="footer__contact">
+        <a class="footer__tel" href="tel:+79524409712">+7(952)440-97-12</a>
+        <a class="footer__mail" href="mailto:an@blacksoftware.ru">an@blacksoftware.ru</a>
+        <button class="footer__button">оставить заявку</button>
+      </div>
+      <div class="footer__requisites">
+        <p class="footer__requisites-title"> ооо "Блэк софтвэр" </p>
+          <p><span class="footer__requisites-uppercase">ИНН/КПП:</span> 5260458909/6001001 <br>
+          <span class="footer__requisites-uppercase">огрн:</span> 1185275059530 </p>
+          <p> 603152  г. Нижний Новгород <br>
+ул. Ларина, 22лит1Д,  ГУ НИБИ </p>
+          </div>
     </footer>
     <script src="script/script.min.js"></script>
   </body>
