--- a/source/index.html
+++ b/source/index.html
@@ -6,6 +6,14 @@
     <link rel="preload" href="fonts/baronneue.woff" as="font">
     <link rel="preload" href="fonts/baronneue.woff2" as="font">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/icons/favicon-16x16.png">
+    <link rel="manifest" href="img/icons/site.webmanifest">
+    <link rel="mask-icon" href="img/icons/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 		<script src="jquery.mask.min.js"></script>
     <title> BLACK SOFTWARE</title>
